Completed OAuth and testing for Packages Collection
